k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hris-app
  namespace: hrisapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hris-backend
  template:
    metadata:
      labels:
        app: hris-backend
    spec:
      containers:
        - name: hris-app
          image: penicili/hris-anu-be:c608e25
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hris-backend
  namespace: hrisapp
spec:
  selector:
    app: hris-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
